<resources>
    <string name="app_name">happyball</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

    <string name="homepage">主页</string>
    <string name="back">返回</string>

    <!-- Main -->
    <string name="vedio_title">班级选择</string>
    <string name="audio_title">难度选择</string>
    <string name="vedio">视频</string>
    <string name="audio">音频</string>
    <string name="reception_last_semester">1阶(上)</string>
    <string name="reception_next_semester">1阶(下)</string>
    <string name="middle_last_semester">2阶(上)</string>
    <string name="middle_next_semester">2阶(下)</string>
    <string name="big_last_semester">3阶(上)</string>
    <string name="big_next_semester">3阶(下)</string>

    <!-- VedioLesson -->
    <string name="lesson_safe">幼儿安全教育</string>
    <string name="lesson_hygiene">幼儿卫生常识</string>
    <string name="lesson_nation">民族列车</string>
    <string name="lesson_pop">流行歌舞</string>
    <string name="lesson_world">世界魅力</string>
    <string name="lesson_china">中国魅力</string>

    <!-- VedioChoice -->
    <string name="lesson_name">幼儿安全教育</string>
    <string name="lesson_detail">幼儿安全教育-小班上学期，是针对于幼儿小班小朋友的XXXXXXX.幼儿安全教育-小班上学期，是针对于幼儿小班小朋友的XXXXXXX.幼儿安全教育-小班上学期，是针对于幼儿小班小朋友的</string>
    <string name="number">集数</string>
    <string name="number_value">1-%d</string>
    <string name="last_time">上次播放至第%d集</string>
    <string name="last_time_value">13:14</string>
    <string name="last_no_playing">还未观看过</string>
    <string name="the_number">第%s集</string>

    <!-- VedioPlay -->
    <string name="playback">26.7万</string>
    <string name="playlength">05:16</string>
    <string name="played">已播放</string>

    <!-- VedioFinish -->
    <string name="play_finish">播放结束</string>
    <string name="study">音乐学习</string>
    <string name="replay">重播</string>
    <string name="knowledge">知识问答</string>

    <!-- VedioKnowLedge -->
    <string name="knowledge_answer">正确答案</string>
    <string name="knowledge_title">乐球知识点</string>
    <string name="knowledge_question">Q: %s</string>

    <!-- VedioStudy -->
    <string name="study_song">学儿歌</string>
    <string name="study_dance">学跳舞</string>

    <!-- VedioSong -->
    <string name="song_lyrics">歌词列表</string>
    <string name="song_sing">原唱</string>
    <string name="song_accompaniment">伴奏</string>

    <!-- VedioDance -->
    <string name="dance_next">下一个动作</string>
    <string name="dance_last">上一个动作</string>

    <!-- AudioPlay -->
    <string name="difficult_name">1阶上</string>
    <string name="difficult_detail_title">2018上半年最热新歌TOP50</string>
    <string name="diffcult_dtail_content">介绍： 2018上半年全站热度最高的50首新歌，歌单数据综合参考了2018上半年云音乐所有最新上架歌曲在全站的平均播放及收藏排行。（注：曲目均为2018上半年第一次上架新歌...</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="audio_song_title">歌曲标题</string>
    <string name="audio_duration">时长</string>
    <string name="audio_singer">歌手</string>
    <string name="audio_album">专辑</string>
</resources>
