<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/audio_id"
            style="@style/audio_list_item_text"
            android:visibility="invisible"
            android:layout_marginLeft="20dp"
            android:layout_weight="0"
            android:text="1" />

        <ImageView
            android:id="@+id/audio_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="60dp"
            android:layout_weight="0"
            android:visibility="invisible"
            android:src="@mipmap/audio_item_play" />

        <TextView
            android:id="@+id/audio_title"
            style="@style/audio_list_item_text"
            android:text="@string/audio_song_title"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/audio_duration"
            android:layout_weight="1"
            style="@style/audio_list_item_text"
            android:text="@string/audio_duration"/>

        <TextView
            android:id="@+id/audio_singer"
            style="@style/audio_list_item_text"
            android:layout_weight="1"
            android:text="@string/audio_singer"/>

        <TextView
            android:id="@+id/audio_album"
            style="@style/audio_list_item_text"
            android:layout_weight="1"
            android:text="@string/audio_album"/>

    </LinearLayout>

</LinearLayout>
