<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_class_selection"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/main_title"
            android:text="" />

        <RelativeLayout
            android:id="@+id/rl_vedio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="238dp"
            android:focusable="true"
            android:nextFocusRight="@id/rl_reception_last"
            android:nextFocusDown="@id/rl_audio">

            <ImageView
                android:id="@+id/iv_vedio"
                android:layout_width="200dp"
                android:layout_height="106dp"
                android:src="@mipmap/main_vedio" />

            <TextView
                android:id="@+id/tv_vedio_name"
                style="@style/main_type_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/vedio" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="67dp"
            android:layout_marginTop="358dp"
            android:focusable="true"
            android:nextFocusRight="@id/rl_reception_last"
            android:nextFocusUp="@id/rl_vedio">

            <ImageView
                android:id="@+id/iv_audio"
                android:layout_width="235dp"
                android:layout_height="106dp"
                android:src="@mipmap/main_audio" />

            <TextView
                android:id="@+id/tv_audio_name"
                style="@style/main_type_text"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="15dp"
                android:text="@string/audio" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_reception_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="380dp"
            android:layout_marginTop="110dp"
            android:focusable="true"
            android:nextFocusRight="@id/rl_middle_last"
            android:nextFocusDown="@id/rl_reception_next">

            <ImageView
                android:id="@+id/iv_reception_last"
                style="@style/main_semester_image"
                android:src="@mipmap/main_reception" />

            <ImageView style="@style/main_semester_frame" />

            <TextView
                android:id="@+id/tv_reception_last_name"
                style="@style/main_semester_text"
                android:text="@string/reception_last_semester" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_middle_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rl_reception_last"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@+id/rl_reception_last"
            android:focusable="true"
            android:nextFocusLeft="@id/rl_reception_last"
            android:nextFocusRight="@id/rl_big_last"
            android:nextFocusDown="@id/rl_middle_next">

            <ImageView
                android:id="@+id/iv_middle_last"
                style="@style/main_semester_image"
                android:src="@mipmap/main_middle" />

            <ImageView style="@style/main_semester_frame" />

            <TextView
                android:id="@+id/tv_middle_last_name"
                style="@style/main_semester_text"
                android:text="@string/middle_last_semester" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_big_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rl_reception_last"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@+id/rl_middle_last"
            android:focusable="true"
            android:nextFocusLeft="@id/rl_middle_last"
            android:nextFocusRight="@id/rl_reception_next"
            android:nextFocusDown="@id/rl_big_next">

            <ImageView
                android:id="@+id/iv_big_last"
                style="@style/main_semester_image"
                android:src="@mipmap/main_big" />

            <ImageView style="@style/main_semester_frame" />

            <TextView
                android:id="@+id/tv_big_last_name"
                style="@style/main_semester_text"
                android:text="@string/big_last_semester" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_reception_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_reception_last"
            android:layout_alignStart="@+id/rl_reception_last"
            android:layout_marginTop="70dp"
            android:focusable="true"
            android:nextFocusLeft="@id/rl_big_last"
            android:nextFocusRight="@id/rl_middle_next"
            android:nextFocusUp="@id/rl_reception_last">

            <ImageView
                android:id="@+id/iv_reception_next"
                style="@style/main_semester_image"
                android:src="@mipmap/main_reception" />

            <ImageView style="@style/main_semester_frame" />

            <TextView
                android:id="@+id/tv_reception_next_name"
                style="@style/main_semester_text"
                android:text="@string/reception_next_semester" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_middle_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/rl_middle_last"
            android:layout_alignTop="@+id/rl_reception_next"
            android:focusable="true"
            android:nextFocusLeft="@id/rl_reception_next"
            android:nextFocusRight="@id/rl_big_next"
            android:nextFocusUp="@id/rl_middle_last">

            <ImageView
                android:id="@+id/iv_middle_next"
                style="@style/main_semester_image"
                android:src="@mipmap/main_middle" />

            <ImageView style="@style/main_semester_frame" />

            <TextView
                android:id="@+id/tv_middle_next_name"
                style="@style/main_semester_text"
                android:text="@string/middle_next_semester" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_big_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/rl_big_last"
            android:layout_alignTop="@+id/rl_reception_next"
            android:focusable="true"
            android:nextFocusLeft="@id/rl_middle_next"
            android:nextFocusRight="@id/rl_reception_last"
            android:nextFocusUp="@id/rl_big_last">

            <ImageView
                android:id="@+id/iv_big_next"
                style="@style/main_semester_image"
                android:src="@mipmap/main_big" />

            <ImageView style="@style/main_semester_frame" />

            <TextView
                android:id="@+id/tv_big_next_name"
                style="@style/main_semester_text"
                android:text="@string/big_next_semester" />
        </RelativeLayout>

        <include layout="@layout/common_progress" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>