<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_choice_course">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_homepage"
            style="@style/home_pager">

            <ImageView
                android:id="@+id/iv_homepage"
                style="@style/home_pager_image" />

            <TextView
                style="@style/home_pager_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_course_semester"
            android:layout_width="260dp"
            android:layout_height="230dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="190dp"
            android:layout_marginTop="140dp">

            <ImageView
                android:id="@+id/iv_course_semester"
                style="@style/main_semester_image"
                android:src="@mipmap/choice_course_semester" />

            <ImageView
                style="@style/main_semester_frame" />

            <TextView
                android:id="@+id/tv_semester_name"
                style="@style/main_semester_text"
                android:text="@string/reception_last_semester" />

            <TextView
                android:id="@+id/tv_lesson_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="50dp"
                android:text="@string/lesson_name"
                android:textSize="@dimen/text_song"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_course_semester_detail"
            android:layout_width="645dp"
            android:layout_height="210dp"
            android:layout_alignTop="@+id/rl_course_semester"
            android:layout_toRightOf="@+id/rl_course_semester">

            <ImageView
                android:id="@+id/iv_course_semester_detail"
                android:layout_width="645dp"
                android:layout_height="210dp"
                android:src="@mipmap/choice_sourse_text" />

            <LinearLayout
                android:id="@+id/ll_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_detail_title_lesson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lesson_name"
                    android:textSize="@dimen/text_lesson"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="@dimen/text_lesson"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_title_semester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reception_last_semester"
                    android:textSize="@dimen/text_lesson"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_detail_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ll_detail_title"
                android:layout_below="@+id/ll_detail_title"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/lesson_detail"
                android:textSize="@dimen/text_semester"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rl_course_semester"
            android:layout_alignRight="@+id/rl_course_semester_detail"
            android:layout_below="@+id/rl_course_semester_detail"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_number_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/number"
                android:textSize="@dimen/text_song"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/tv_number_name"
                android:text="@string/number_value"
                android:textSize="@dimen/text_song"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_last_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/last_time_value"
                android:textSize="@dimen/text_song"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_last_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="3dp"
                android:layout_toLeftOf="@+id/tv_last_time_value"
                android:text="@string/last_time"
                android:textSize="@dimen/text_song"
                android:textStyle="bold" />

        </RelativeLayout>

        <cn.baby.happyball.view.recyclerView.TvRecyclerView
            android:id="@+id/cv_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rl_number"
            android:layout_below="@+id/rl_number"
            android:layout_marginRight="180dp"
            android:layout_marginTop="10dp"
            android:focusable="true" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
