<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_vedio_finish">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_homepage"
            style="@style/home_pager">

            <ImageView
                android:id="@+id/iv_homepage"
                style="@style/home_pager_image" />

            <TextView
                style="@style/home_pager_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_back"
            style="@style/home_back">

            <ImageView
                android:id="@+id/iv_back"
                style="@style/home_back_image" />

            <TextView
                style="@style/home_back_text" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_replay"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@mipmap/finish_replay_frame"
            android:focusable="true"
            android:gravity="center"
            android:nextFocusLeft="@id/rl_study"
            android:nextFocusUp="@id/rl_study"
            android:nextFocusRight="@id/rl_knowledge"
            android:nextFocusDown="@id/rl_knowledge"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="22dp"
                android:src="@mipmap/finish_replay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text="@string/replay"
                android:textSize="@dimen/text_main" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_play_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_replay"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/play_finish"
            android:textSize="@dimen/main_type" />

        <RelativeLayout
            android:id="@+id/rl_study"
            style="@style/study_layout"
            android:layout_toLeftOf="@+id/ll_replay"
            android:layout_marginRight="80dp"
            android:nextFocusLeft="@id/rl_back"
            android:nextFocusRight="@id/ll_replay"
            android:nextFocusDown="@id/ll_replay">

            <ImageView
                android:id="@+id/iv_study"
                style="@style/study_image"
                android:src="@mipmap/finish_song" />

            <TextView
                android:id="@+id/tv_study"
                style="@style/study_text"
                android:text="@string/study"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_knowledge"
            style="@style/study_layout"
            android:layout_toRightOf="@+id/ll_replay"
            android:layout_marginLeft="80dp"
            android:nextFocusRight="@id/rl_homepage"
            android:nextFocusLeft="@id/ll_replay"
            android:nextFocusUp="@id/ll_replay">

            <ImageView
                android:id="@+id/iv_knowledge"
                style="@style/study_image"
                android:src="@mipmap/finish_dance" />

            <TextView
                android:id="@+id/tv_knowledge"
                style="@style/study_text"
                android:text="@string/knowledge"/>
        </RelativeLayout>

        <include layout="@layout/common_progress" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
